Bug 97775 - [BSW] [BAT] kms_cursor_legacy/basic-cursor-vs-flip-varying-size subtest fails sporadically
Summary: [BSW] [BAT] kms_cursor_legacy/basic-cursor-vs-flip-varying-size subtest fails...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: highest major
Assignee: Jari Tahvanainen
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-12 13:11 UTC by Akash Goel
Modified: 2016-09-30 06:25 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: display/atomic


Attachments

Description Akash Goel 2016-09-12 13:11:30 UTC
kms_cursor_legacy/basic-cursor-vs-flip-varying-size subtest fails sporadically with the below error log 

(kms_cursor_legacy:10701) WARNING: page flip 34 was delayed, missed 1 frames
(kms_cursor_legacy:10701) CRITICAL: Test assertion failure function basic_cursor_vs_flip, file kms_cursor_legacy.c:730:
(kms_cursor_legacy:10701) CRITICAL: Failed assertion: vbl.sequence == vblank_start + vrefresh
(kms_cursor_legacy:10701) CRITICAL: error: 14868 != 14867
Subtest basic-cursor-vs-flip-varying-size failed.
**** DEBUG ****
(kms_cursor_legacy:10701) DEBUG: Test requirement passed: found
(kms_cursor_legacy:10701) igt-kms-DEBUG: display: HDMI-A-2: set_pipe(C)
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(kms_cursor_legacy:10701) igt-kms-DEBUG: display: C.0: plane_set_fb(50)
(kms_cursor_legacy:10701) DEBUG: Test requirement passed: (output = set_fb_on_crtc(display, pipe, &fb_info))
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325241, tiling=0x0, size=0)
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=256)
(kms_cursor_legacy:10701) DEBUG: Test requirement passed: cursor
(kms_cursor_legacy:10701) igt-kms-DEBUG: display: C.3: plane_set_fb(71)
(kms_cursor_legacy:10701) DEBUG: Test requirement passed: !(width <= 64 && height <= 64)
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=256, height=256, format=0x34325241, tiling=0x0, size=0)
(kms_cursor_legacy:10701) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=3, pitch=1024)
(kms_cursor_legacy:10701) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     HDMI-A-2: Selecting pipe C
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetCrtc pipe A, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe A, plane 1, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe A, plane 2, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetCursor pipe A, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetCrtc pipe B, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe B, plane 1, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe B, plane 2, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetCursor pipe B, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     HDMI-A-2: SetCrtc pipe C, fb 50, src (0, 0), mode 1920x1080
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe C, plane 1, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetPlane pipe C, plane 2, disabling
(kms_cursor_legacy:10701) igt-kms-DEBUG: display:     SetCursor pipe C, fb 2 64x64
(kms_cursor_legacy:10701) igt-kms-DEBUG: display: }
(kms_cursor_legacy:10701) DEBUG: Test requirement passed: target > 1
(kms_cursor_legacy:10701) DEBUG: Using a target of 16 cursor updates per half-vblank (60)
(kms_cursor_legacy:10701) WARNING: page flip 34 was delayed, missed 1 frames
(kms_cursor_legacy:10701) CRITICAL: Test assertion failure function basic_cursor_vs_flip, file kms_cursor_legacy.c:730:
(kms_cursor_legacy:10701) CRITICAL: Failed assertion: vbl.sequence == vblank_start + vrefresh
(kms_cursor_legacy:10701) CRITICAL: error: 14868 != 14867
****  END  ****
Comment 1 Imre Deak 2016-09-12 13:22:02 UTC
I can reproduce this, working on a fix now.
Comment 2 yann 2016-09-12 14:30:27 UTC
(In reply to Imre Deak from comment #1)
> I can reproduce this, working on a fix now.

Imre's patch available here: https://patchwork.freedesktop.org/series/12336/
Comment 3 Imre Deak 2016-09-12 14:37:25 UTC
(In reply to yann from comment #2)
> (In reply to Imre Deak from comment #1)
> > I can reproduce this, working on a fix now.
> 
> Imre's patch available here: https://patchwork.freedesktop.org/series/12336/

In addition to the above the following is also needed:
https://patchwork.freedesktop.org/series/12335/
Comment 4 Jari Tahvanainen 2016-09-13 07:01:00 UTC
Based on the CI execution results for https://patchwork.freedesktop.org/series/12336/
Fi.CI.BAT - Success
Test kms_cursor_legacy:
        Subgroup basic-cursor-vs-flip-varying-size:
                fail       -> PASS       (fi-bsw-n3050)

This execution does not use the change in intel-gpu-tools https://patchwork.freedesktop.org/series/12335/ so this might be still flip-flop. 
And due to sporadic nature of this bug this is not definitive conclusion that failure has been fixed.
Comment 5 Jari Tahvanainen 2016-09-22 08:41:44 UTC
No failures on fi-bsw-n3050 with refactored varying-size tests
- igt@kms_cursor_legacy@basic-flip-after-cursor-varying-size
- igt@kms_cursor_legacy@basic-flip-before-cursor-varying-size
Let's follow the situation still for a week or so and then close this if no failures.
Comment 6 Jani Saarinen 2016-09-26 10:58:27 UTC
Jari, situation still same, ok to resolve?
Comment 7 Jari Tahvanainen 2016-09-30 06:24:57 UTC
No failures anymore on basic-flip-after/before-cursor-varying-size tests. Resolved+Fixed and Verified and Closed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.